--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
             ]
         }
     },
+    "repositories": [
+        {"type": "vcs", "url": "https://github.com/santoslluis/AliceDataFixtures"}
+    ],
 
     "require": {
         "php": "^7.4 || ^8.0",
@@ -39,7 +42,7 @@
         "psr/log": "^1.0 || ^2.0 || ^3.0",
         "symfony/finder": "^5.4.2 || ^6.0",
         "symfony/framework-bundle": "^5.4.2 || ^6.0",
-        "theofidry/alice-data-fixtures": "^1.5"
+        "theofidry/alice-data-fixtures": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
